@@ -9,7 +9,6 @@ package io.harness.cvng.core.services.impl.monitoredService;
 
 import static io.harness.cvng.core.utils.DateTimeUtils.roundDownTo5MinBoundary;
 import static io.harness.cvng.dashboard.entities.HeatMap.HeatMapResolution.FIVE_MIN;
-import static io.harness.cvng.notification.beans.NotificationRuleConditionType.DEPLOYMENT_IMPACT_REPORT;
 import static io.harness.data.structure.UUIDGenerator.generateUuid;
 import static io.harness.rule.OwnerRule.ABHIJITH;
 import static io.harness.rule.OwnerRule.ANJAN;
@@ -54,7 +53,6 @@ import io.harness.cvng.beans.MonitoredServiceType;
 import io.harness.cvng.beans.TimeSeriesMetricType;
 import io.harness.cvng.beans.change.ChangeCategory;
 import io.harness.cvng.beans.change.ChangeSourceType;
-import io.harness.cvng.beans.change.ChangeSummaryDTO;
 import io.harness.cvng.beans.cvnglog.CVNGLogDTO;
 import io.harness.cvng.beans.cvnglog.CVNGLogTag;
 import io.harness.cvng.beans.cvnglog.CVNGLogTag.TagType;
@@ -62,6 +60,7 @@ import io.harness.cvng.beans.cvnglog.CVNGLogType;
 import io.harness.cvng.beans.cvnglog.ExecutionLogDTO;
 import io.harness.cvng.beans.cvnglog.ExecutionLogDTO.LogLevel;
 import io.harness.cvng.beans.cvnglog.TraceableType;
+import io.harness.cvng.cdng.services.api.SRMAnalysisStepService;
 import io.harness.cvng.client.FakeNotificationClient;
 import io.harness.cvng.client.NextGenService;
 import io.harness.cvng.client.NextGenServiceImpl;
@@ -71,6 +70,7 @@ import io.harness.cvng.core.beans.HealthSourceMetricDefinition.AnalysisDTO.Deplo
 import io.harness.cvng.core.beans.HealthSourceMetricDefinition.AnalysisDTO.LiveMonitoringDTO;
 import io.harness.cvng.core.beans.HealthSourceMetricDefinition.SLIDTO;
 import io.harness.cvng.core.beans.RiskProfile;
+import io.harness.cvng.core.beans.change.ChangeSummaryDTO;
 import io.harness.cvng.core.beans.monitoredService.ChangeSourceDTO;
 import io.harness.cvng.core.beans.monitoredService.CountServiceDTO;
 import io.harness.cvng.core.beans.monitoredService.HealthScoreDTO;
@@ -135,6 +135,7 @@ import io.harness.cvng.notification.beans.NotificationRuleDTO;
 import io.harness.cvng.notification.beans.NotificationRuleRefDTO;
 import io.harness.cvng.notification.beans.NotificationRuleResponse;
 import io.harness.cvng.notification.beans.NotificationRuleType;
+import io.harness.cvng.notification.entities.MonitoredServiceNotificationRule;
 import io.harness.cvng.notification.entities.MonitoredServiceNotificationRule.MonitoredServiceChangeImpactCondition;
 import io.harness.cvng.notification.entities.MonitoredServiceNotificationRule.MonitoredServiceChangeObservedCondition;
 import io.harness.cvng.notification.entities.MonitoredServiceNotificationRule.MonitoredServiceHealthScoreCondition;
@@ -224,6 +225,8 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
   @Mock ChangeSourceService changeSourceServiceMock;
   @Mock FakeNotificationClient notificationClient;
   @Mock private PersistentLocker mockedPersistentLocker;
+
+  @Mock SRMAnalysisStepService srmAnalysisStepService;
   @Mock private EnforcementClientService enforcementClientService;
   @Mock private FeatureFlagService featureFlagService;
 
@@ -302,6 +305,7 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
     FieldUtils.writeField(monitoredServiceService, "notificationClient", notificationClient, true);
     FieldUtils.writeField(monitoredServiceService, "featureFlagService", featureFlagService, true);
     FieldUtils.writeField(monitoredServiceService, "ngLicenseHttpClient", ngLicenseHttpClient, true);
+    FieldUtils.writeField(monitoredServiceService, "srmAnalysisStepService", srmAnalysisStepService, true);
   }
 
   @Test
@@ -1241,6 +1245,7 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
                    builderFactory.getContext().getMonitoredServiceParams(), Arrays.asList(changeSourceIdentifier)))
         .isEmpty();
     assertThat(cvConfigs.size()).isEqualTo(0);
+    verify(srmAnalysisStepService).abortRunningStepsForMonitoredService(projectParams, monitoredServiceIdentifier);
   }
 
   @Test
@@ -3317,30 +3322,47 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
   @Test
   @Owner(developers = VARSHA_LALWANI)
   @Category(UnitTests.class)
-  public void testGetNotificationRuleConditions() {
+  public void testGetEnabledNotificationRulesWithConditionType() {
     NotificationRuleDTO notificationRuleDTO =
         builderFactory.getNotificationRuleDTOBuilder(NotificationRuleType.MONITORED_SERVICE).build();
-    notificationRuleDTO.getConditions().add(NotificationRuleCondition.builder()
-                                                .type(DEPLOYMENT_IMPACT_REPORT)
-                                                .spec(DeploymentImpactReportConditionSpec.builder().build())
-                                                .build());
-    NotificationRuleResponse notificationRuleResponse =
+    NotificationRuleResponse notificationRuleResponse1 =
+        notificationRuleService.create(builderFactory.getContext().getProjectParams(), notificationRuleDTO);
+    notificationRuleDTO.setIdentifier("noti1");
+    notificationRuleDTO.setConditions(
+        Collections.singletonList(NotificationRuleCondition.builder()
+                                      .type(NotificationRuleConditionType.DEPLOYMENT_IMPACT_REPORT)
+                                      .spec(DeploymentImpactReportConditionSpec.builder().build())
+                                      .build()));
+    notificationRuleDTO.setIdentifier("noti2");
+    NotificationRuleResponse notificationRuleResponse2 =
+        notificationRuleService.create(builderFactory.getContext().getProjectParams(), notificationRuleDTO);
+    notificationRuleDTO.setIdentifier("noti3");
+    NotificationRuleResponse notificationRuleResponse3 =
         notificationRuleService.create(builderFactory.getContext().getProjectParams(), notificationRuleDTO);
 
     MonitoredServiceDTO monitoredServiceDTO = createMonitoredServiceDTOWithCustomDependencies(
         "service_1_local", environmentParams.getServiceIdentifier(), Sets.newHashSet());
     monitoredServiceDTO.setNotificationRuleRefs(
         Arrays.asList(NotificationRuleRefDTO.builder()
-                          .notificationRuleRef(notificationRuleResponse.getNotificationRule().getIdentifier())
+                          .notificationRuleRef(notificationRuleResponse1.getNotificationRule().getIdentifier())
                           .enabled(true)
-                          .build()));
+                          .build(),
+            NotificationRuleRefDTO.builder()
+                .notificationRuleRef(notificationRuleResponse2.getNotificationRule().getIdentifier())
+                .enabled(false)
+                .build(),
+            NotificationRuleRefDTO.builder()
+                .notificationRuleRef(notificationRuleResponse3.getNotificationRule().getIdentifier())
+                .enabled(true)
+                .build()));
     monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceDTO);
-    PageResponse<NotificationRuleCondition> notificationRuleConditions =
-        monitoredServiceService.getNotificationRuleConditions(projectParams, monitoredServiceDTO.getIdentifier(),
-            PageParams.builder().page(0).size(10).build(), List.of(DEPLOYMENT_IMPACT_REPORT));
-    assertThat(notificationRuleConditions.getTotalPages()).isEqualTo(1);
-    assertThat(notificationRuleConditions.getTotalItems()).isEqualTo(1);
-    assertThat(notificationRuleConditions.getContent().get(0).getType()).isEqualTo(DEPLOYMENT_IMPACT_REPORT);
+    List<MonitoredServiceNotificationRule> notificationRules =
+        monitoredServiceService.getNotificationRules(projectParams, monitoredServiceDTO.getIdentifier(),
+            Collections.singletonList(NotificationRuleConditionType.DEPLOYMENT_IMPACT_REPORT));
+    assertThat(notificationRules.size()).isEqualTo(1);
+    assertThat(notificationRules.get(0).getType()).isEqualTo(NotificationRuleType.MONITORED_SERVICE);
+    assertThat(notificationRules.get(0).getIdentifier())
+        .isEqualTo(notificationRuleResponse3.getNotificationRule().getIdentifier());
   }
 
   @Test
